# haskell-dino-run

./: README.md  dino.cabal
image/: out_bush.txt  out_bushA.txt  out_dead.txt  out_jump.txt  out_left.txt  out_right.txt
src/: Dino.hs  UI.hs
test/: Common.hs  Test.hs
