name:                dino
version:             0.1.0.0
homepage:            https://github.com/Easonrust/haskell-dino-run
license:             BSD3
license-file:        LICENSE
author:              Team 15
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

Library
  ghc-options:        -W
  exposed-modules:    Dino
  Default-Extensions: OverloadedStrings

  -- other-extensions:
  build-depends:       base         >= 4.7 && < 5
                     , brick
                     , containers
                     , extra
                     , linear
                     , lens
                     , random
                     , transformers
                     , vty
                     , QuickCheck
  hs-source-dirs:      src
  default-language:    Haskell2010

executable dino
  hs-source-dirs:      src
  other-modules:       Dino
                     , UI
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base         >= 4.7 && < 5
                     , brick
                     , containers
                     , extra
                     , linear
                     , lens
                     , random
                     , transformers
                     , vty
                     , QuickCheck
test-suite test
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  Default-Extensions: OverloadedStrings
  main-is:          Test.hs
  build-depends:    base         >= 4.7 && < 5,
                    brick,
                    containers,
                    extra,
                    filepath,
                    linear,
                    lens,
                    random,
                    transformers,
                    vty,
                    QuickCheck,
                    tasty,
                    tasty-hunit,
                    tasty-quickcheck,
                    process,
                    dino
  other-modules:    Common 